[metadata]
name = siosocks
version = attr: siosocks.__version__
url = https://github.com/pohmelie/siosocks
author = pohmelie
author_email = multisosnooley@gmail.com
description = sans-io socks proxy client/server with couple io backends
long_description = file: readme.md
long_description_content_type = text/markdown
license = MIT
license_file = license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.6

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-asyncio
    trio
    pytest-trio
trio =
    trio
